[package]
name = "indyscan-broadcaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indy-vdr = { version = "0.3.4", default-features = false, features = ["ffi", "log"] }
async-trait = "0.1.68"
tokio = { version = "=1.28.2",  features = ["rt", "macros", "rt-multi-thread", "sync"]  }
env_logger = "0.9.3"
log = "0.4.16"
thiserror = "1.0.40"
time = "0.3.25"
